# ELEC1601-Robot-Maze

./: .gitignore  CMakeLists.txt
include/: robot.h
lib/: structures.h
src/: main.c  robot.c
